--- a/master_data/character_parameters/data102.yml
+++ b/master_data/character_parameters/data102.yml
@@ -1,7 +1,7 @@
 data102:
   id: 102
   character_id: 1
-  __name: さくら
+  __name: うにゅう
   level: 2
-  max_hp: 120
-  max_mp: 50
+  max_hp: 100
+  max_mp: 25
