--- a/master_data/character_parameters/data104.yml
+++ b/master_data/character_parameters/data104.yml
@@ -1,7 +1,7 @@
 data104:
   id: 104
   character_id: 1
-  __name: さくら
+  __name: うにゅう
   level: 4
-  max_hp: 200
-  max_mp: 50
+  max_hp: 170
+  max_mp: 25
