--- a/master_data/character_parameters/data105.yml
+++ b/master_data/character_parameters/data105.yml
@@ -1,7 +1,7 @@
 data105:
   id: 105
   character_id: 1
-  __name: さくら
+  __name: うにゅう
   level: 5
-  max_hp: 300
-  max_mp: 50
+  max_hp: 250
+  max_mp: 25
